--- a/pins-r/_pins.yaml
+++ b/pins-r/_pins.yaml
@@ -14,3 +14,4 @@ penguins_model:
 - penguins_model/20230730T191627Z-54641/
 - penguins_model/20230730T192359Z-54641/
 - penguins_model/20230730T235625Z-54641/
+- penguins_model/20231220T055258Z-da353/
